Обновлён .gitignore для временных файлов, добавлены директории для TTS и записей. Исправлены параметры TTS: изменён формат вывода и увеличена скорость обработки. Оптимизирована работа с временными файлами в классе Account.

--- a/.gitignore
+++ b/.gitignore
@@ -69,15 +69,11 @@ venv.bak/
 Thumbs.db
 desktop.ini
 
-# Recordings
-recordings/
-
-# Dialog history
-dialog_history/
-
-# TTS
-tts/generated/
+# Temporary files
 /tmp/pjsua_tts/
+/tmp/pjsua_recordings/
+
+dialog_history/
 
 # Logs
 *.log
